[package]
name = "tproxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "proxy"

[dependencies]
anyhow = "1.0"
clap = { version = "3.1", default-features = false, features = ["std", "derive"] }
ctrlc = "3.2"
libbpf-rs = { git = "https://github.com/libbpf/libbpf-rs", branch = "master" }
nix = "0.24"

[build-dependencies]
libbpf-cargo = { git = "https://github.com/libbpf/libbpf-rs", branch = "master" }
